fine-tuned ceci-cela-celui

--- a/french/pages/exercise_ceci_cela_celui.html
+++ b/french/pages/exercise_ceci_cela_celui.html
@@ -37,62 +37,64 @@
 
                             <li>
                                 <input type="text" pattern="Cette">
-                                broche est en or,
+                                <b title="Cette">broche</b> est en or,
                                 <input type="text" pattern="celle-là">
-                                est en argent.
+                                <b title="celle-là">est</b> en argent.
                             </li>
 
                             <li>
                                 <input type="text" pattern="Ces">
-                                enfants sont le miens,
+                                <b title="Ces">enfants</b> sont le miens,
                                 <input type="text" pattern="ceux-là">
-                                sont à ma sœur.
+                                <b title="ceux-là">sont</b> à ma sœur.
                             </li>
 
                             <li>
                                 <input type="text" pattern="Cet">
-                                oiseau est une hirondelle,
+                                <b title="Cet">oiseau</b> est une hirondelle,
                                 <input type="text" pattern="celui-là">
-                                est une mésange.
+                                <b title="celui-là">est</b> une mésange.
                             </li>
 
                             <li>
                                 <input type="text" pattern="Cet">
-                                appartement est vaste,
+                                <b title="Cet">appartement</b> est vaste,
                                 <input type="text" pattern="celui-là">
-                                est plus petit.
+                                <b title="celui-là">est</b> plus petit.
                             </li>
 
                             <li>
                                 <input type="text" pattern="Ces">
-                                copies sont corrigées,
+                                <b title="Ces">copies</b> sont corrigées,
                                 <input type="text" pattern="celles-là">
-                                ne le sont pas.
+                                ne le <b title="celles-là">sont</b> pas.
                             </li>
 
                             <li>
                                 <input type="text" pattern="Ce">
-                                vin est français,
+                                <b title="Ce">vin</b> est français,
                                 <input type="text" pattern="celui-là">
-                                est chilien.
+                                <b title="celui-là">est</b> chilien.
                             </li>
 
                             <li>
                                 <input type="text" pattern="Cette">
-                                librairie offre de nombreux livres intéressants, mais pas
+                                <b title="Cette">librairie</b> offre de nombreux livres
+                                intéressants, mais <b title="celle-là">pas</b>
                                 <input type="text" pattern="celle-là">.
                             </li>
 
                             <li>
                                 <input type="text" pattern="Cet">
-                                alcool est doux,
+                                <b title="Cet">alcool</b> est doux,
                                 <input type="text" pattern="celui-là">
-                                est corsé.
+                                <b title="celui-là">est</b> corsé.
                             </li>
 
                             <li>
                                 <input type="text" pattern="Ces">
-                                plantes sont fleuries, mais pas
+                                <b title="Ces">plantes</b> sont fleuries,
+                                mais <b title="celles-là">pas</b>
                                 <input type="text" pattern="celles-là"> .
                             </li>
                         </ol>
@@ -107,58 +109,58 @@
                             <li>
                                 Aujourd’hui,
                                 <input type="text" pattern="c'">
-                                est un jour pour se reposer.
+                                <b title="c'">est</b> un jour pour se reposer.
                             </li>
 
                             <li>
                                 <input type="text" pattern="C'">
-                                est en décembre que nous nous reverrons.
+                                <b title="C'">est</b> en décembre que nous nous reverrons.
                             </li>
 
                             <li>
                                 <input type="text" pattern="Cela">
-                                me semble une bonne idée.
+                                me <b title="Cela">semble</b> une bonne idée.
                             </li>
 
                             <li>
                                 «
                                 <input type="text" pattern="Ça">
-                                n’a aucune importance, si tu ne peux pas m’aider.»
+                                <b title="Ça">n’a</b> aucune importance, si tu ne peux pas m’aider.»
                             </li>
 
                             <li>
                                 «Fais
                                 <input type="text" pattern="ce">
-                                que tu veux,
+                                <b title="ce">que</b> tu veux,
                                 <input type="text" pattern="ça">
-                                m’est égal.*»
+                                <b title="ça">m’est</b> égal.*»
                             </li>
 
                             <li>
                                 <input type="text" pattern="Cela">
-                                ressemble à quelque chose que j’ai déjà vu.
+                                <b title="Cela">ressemble</b> à quelque chose que j’ai déjà vu.
                             </li>
 
                             <li>
                                 <input type="text" pattern="Cela">
-                                étant dit*, il faudra en rediscuter.
+                                <b title="Cela">étant</b> dit*, il faudra en rediscuter.
 
                             <li>
                                 Sortir ce soir !
                                 <input type="text" pattern="Ce">
-                                serait une folie.
+                                <b title="Ce">serait</b> une folie.
                             </li>
 
                             <li>
                                 Au printemps,
                                 <input type="text" pattern="c'">
-                                est le temps de nettoyer le jardin.
+                                <b title="c'">est</b> le temps de nettoyer le jardin.
                             </li>
 
                             <li>
                                 «Est-ce que
                                 <input type="text" pattern="ça">
-                                va ? Tu as l’air malade.
+                                <b title="ça">va</b> ? Tu as l’air malade.
                             </li>
                         </ol>
                     </section>
@@ -170,39 +172,42 @@
 
                         <ol class="short-input">
                             <li>
-                                Nous serons en retard, informez le directeur de
+                                Nous serons en retard, informez le directeur
+                                <b title="cela">de</b>
                                 <input type="text" pattern="cela"> .
                             </li>
 
                             <li>
-                                Apportez-moi
+                                <b title="ceci">Apportez-moi</b>
                                 <input type="text" pattern="ceci">
-                                ou
+                                <b title="cela">ou</b>
                                 <input type="text" pattern="cela">
                                 .
                             </li>
 
                             <li>
-                                Retiens bien
+                                <b title="ceci">Retiens bien</b>
                                 <input type="text" pattern="ceci">
                                 : je serai absente la semaine prochaine.
                             </li>
 
                             <li>
-                                «Il faut boire deux litres d’eau par jour ; n’oublie pas
+                                «Il faut boire deux litres d’eau par jour ;
+                                <b title="cela">n’oublie pas</b>
                                 <input type="text" pattern="cela">
                                 .»
                             </li>
 
                             <li>
-                                Étudiez
+                                <b title="ceci">Étudiez</b>
                                 <input type="text" pattern="ceci">
                                 : les adjectifs et les pronoms démonstratifs.
                             </li>
 
                             <li>
                                 <input type="text" pattern="Ceci">
-                                doit être compris avant
+                                <b title="Ceci">doit</b> être compris
+                                <b title="cela">avant</b>
                                 <input type="text" pattern="cela">
                                 .
                             </li>
@@ -210,25 +215,26 @@
                             <li>
                                 «
                                 <input type="text" pattern="Ça">
-                                me fait du bien de te voir.»
+                                me <b title="Ça">fait</b> du bien de te voir.»
                             </li>
 
                             <li>
-                                Je peux faire
+                                Je peux <b title="ceci">faire</b>
                                 <input type="text" pattern="ceci">
-                                ou
+                                <b title="cela">ou</b>
                                 <input type="text" pattern="cela">
                                 , comme tu le voudras.
                             </li>
 
                             <li>
-                                La prochaine réunion aura lieu la semaine prochaine ; notez
+                                La prochaine réunion aura lieu la semaine prochaine ;
+                                <b title="cela">notez</b>
                                 <input type="text" pattern="cela">
                                 à votre agenda.
                             </li>
 
                             <li>
-                                «Prends
+                                «<b title="ceci|cela">Prends</b>
                                 <input type="text" pattern="ceci|cela">
                                 tous les matins avant de déjeuner.»
                             </li>
@@ -245,40 +251,41 @@
                         <ol class="short-input">
                             <li>
                                 <input type="text" pattern="Celui">
-                                ou
+                                <b title="Celui">ou</b>
                                 <input type="text" pattern="celle">
-                                qui a utilisé mon téléphone
+                                <b title="celle">qui</b> a utilisé mon téléphone
                                 cellulaire a oublié de me le remettre.
                             </li>
 
                             <li>
-                                J’ai vu les dessins que Sandra a faits, mais je n’ai pas vu
+                                J’ai vu les dessins que Sandra a faits,
+                                mais je <b title="ceux">n’ai pas vu</b>
                                 <input type="text" pattern="ceux">
                                 que tu as faits.
                             </li>
 
                             <li>
                                 <input type="text" pattern="Ce">
-                                que je déteste, c’est de travailler avec des gens qui ne
-                                sont pas passionnés.
+                                <b title="Ce">que</b> je déteste,
+                                c’est de travailler avec des gens qui ne sont pas passionnés.
                             </li>
 
                             <li>
                                 Mes amies,
                                 <input type="text" pattern="celles">
-                                d’entre vous qui veulent m’accompagner au parc,
+                                <b title="celles">d’entre vous</b> qui veulent m’accompagner au parc,
                                 dites-le.
                             </li>
 
                             <li>
                                 Ce peintre a produit cette peinture en vingt minutes,
                                 <input type="text" pattern="ce">
-                                qui est très
+                                <b title="ce">qui</b> est très
                                 impressionnant.
                             </li>
 
                             <li>
-                                Je ne peux pas croire
+                                Je ne peux pas <b title="ce">croire</b>
                                 <input type="text" pattern="ce">
                                 que tu viens de me dire.
                             </li>
@@ -286,93 +293,94 @@
                             <li>
                                 Manger et dormir, c’est sûrement
                                 <input type="text" pattern="ce">
-                                qui te ferait du bien.
+                                <b title="ce">qui</b> te ferait du bien.
                             </li>
 
                             <li>
                                 Je pénaliserai toutes
                                 <input type="text" pattern="celles">
-                                qui ne seront pas arrivées à l’heure.
+                                <b title="celles">qui</b> ne seront pas arrivées à l’heure.
                             </li>
 
                             <li>
                                 Les garçons !
                                 <input type="text" pattern="Ceux">
-                                d’entre vous qui parleront français seront
+                                <b title="Ceux">d’entre vous</b> qui parleront français seront
                                 récompensés.
                             </li>
 
                             <li>
                                 <input type="text" pattern="Celles">
-                                qui étaient assises dans le coin de la classe parlaient et ricanaient sans écouter le
-                                professeur.
+                                <b title="Celles">qui</b> étaient assises dans le coin
+                                de la classe parlaient et ricanaient sans écouter le professeur.
                             </li>
 
                             <li>
                                 Ces fleurs sont magnifiques !
                                 <input type="text" pattern="Celles">
-                                que je préfère sont les
+                                <b title="Celles">que</b> je préfère sont les
                                 marguerites et les roses.
                             </li>
 
                             <li>
                                 <input type="text" pattern="Celui">
-                                ou
+                                <b title="Celui">ou</b>
                                 <input type="text" pattern="celle">
-                                qu’on aime occupent toujours une
+                                <b title="celle">qu</b>’on aime occupent toujours une
                                 place spéciale dans notre cœur.
                             </li>
 
                             <li>
                                 C’est tout
                                 <input type="text" pattern="ce">
-                                qu’il m’a dit : «Venez ici et assoyez-vous.»
+                                <b title="ce">qu</b>’il m’a dit : «Venez ici et assoyez-vous.»
                             </li>
 
                             <li>
                                 Voulez-vous m’expliquer
                                 <input type="text" pattern="ce">
-                                qui s’est passé pendant mon absence s’il
+                                <b title="ce">qui</b> s’est passé pendant mon absence s’il
                                 vous plaît.
                             </li>
 
                             <li>
                                 Martin a mangé des fruits de mer,
                                 <input type="text" pattern="ce">
-                                qui l’a rendu malade.
+                                <b title="ce">qui</b> l’a rendu malade.
                             </li>
 
                             <li>
                                 <input type="text" pattern="Celles">
-                                qui ont contribué à l’action bénévole, seront remerciées de leur
-                                bon geste.
+                                <b title="Celles">qui</b> ont contribué à l’action
+                                bénévole, seront remerciées de leur bon geste.
                             </li>
 
                             <li>
                                 <input type="text" pattern="Ce">
-                                que tu dis n’a aucun sens.
+                                <b title="Ce">que</b> tu dis n’a aucun sens.
                             </li>
 
                             <li>
                                 <input type="text" pattern="Celui|Celle">
-                                qui a le mieux réussi l’examen a reçu un prix spécial.
+                                <b title="Celui|Celle">qui</b> a le mieux réussi l’examen a reçu un prix spécial.
                             </li>
 
                             <li>
                                 Julien n’aime pas
                                 <input type="text" pattern="ce">
-                                que vous dites. Vous devriez changer de sujet.
+                                <b title="ce">que</b> vous dites.
+                                Vous devriez changer de sujet.
                             </li>
 
                             <li>
                                 <input type="text" pattern="Celles">
-                                qui sortiront pendant la projection du film ne seront plus
-                                admises dans la salle.
+                                <b title="Celles">qui</b> sortiront pendant la projection
+                                du film ne seront plus admises dans la salle.
                             </li>
 
                             <li>
                                 <input type="text" pattern="Ce">
-                                qui t’intéresse n’est pas vraiment important pour moi.
+                                <b title="Ce">qui</b> t’intéresse n’est pas vraiment important pour moi.
                             </li>
                         </ol>
                     </section>
