fine-tuned de-du-des

--- a/french/pages/exercise_de_du_des.html
+++ b/french/pages/exercise_de_du_des.html
@@ -225,18 +225,18 @@
                         <ol class="short-input">
                             <li>
                                 <span>
-                                    <input type="text" pattern="Des">
+                                    <input type="text" pattern="[Dd]es">
                                     <b title="Des">pommes</b>
                                 </span>
                             </li>
 
                             <li>
-                                <input type="text" pattern="Des">
+                                <input type="text" pattern="[Dd]es">
                                 <b title="Des">oranges</b>
                             </li>
 
                             <li>
-                                <input type="text" pattern="De la">
+                                <input type="text" pattern="[Dd]e la">
                                 <b title="De la">crème à fouetter</b>
                             </li>
 
@@ -265,17 +265,17 @@
                             </li>
 
                             <li>
-                                <input type="text" pattern="Du">
+                                <input type="text" pattern="[Dd]u">
                                 <b title="Du">riz</b>
                             </li>
 
                             <li>
-                                <input type="text" pattern="De la">
+                                <input type="text" pattern="[Dd]e la">
                                 <b title="De la">viande</b>
                             </li>
 
                             <li>
-                                <input type="text" pattern="De la">
+                                <input type="text" pattern="[Dd]e la">
                                 <b title="De la">sauce aux tomates</b>
                             </li>
 
@@ -292,22 +292,22 @@
                             </li>
 
                             <li>
-                                <input type="text" pattern="Des">
+                                <input type="text" pattern="[Dd]es">
                                 <b title="Des">tomates rouges</b>
                             </li>
 
                             <li>
-                                <input type="text" pattern="Du">
+                                <input type="text" pattern="[Dd]u">
                                 <b title="Du">lait</b> 2%
                             </li>
 
                             <li>
-                                <input type="text" pattern="Du">
+                                <input type="text" pattern="[Dd]u">
                                 <b title="Du">fromage</b>
                             </li>
 
                             <li>
-                                <input type="text" pattern="Des">
+                                <input type="text" pattern="[Dd]es">
                                 <b title="Des">concombres</b>
                             </li>
 
