added text exercise for mon-ton-son

--- a/french/pages/exercise_de_du_des.html
+++ b/french/pages/exercise_de_du_des.html
@@ -43,12 +43,11 @@
 
                         <ol class="short-input">
                             <li>
-                                <span> Les Suisses aiment
-                                    <input type="text" pattern="le">
-                                    <b title="le">chocolat</b>. Ils mangent
-                                    <input type="text" pattern="du">
-                                    <b title="du">chocolat</b>.
-                                </span>
+                                Les Suisses aiment
+                                <input type="text" pattern="le">
+                                <b title="le">chocolat</b>. Ils mangent
+                                <input type="text" pattern="du">
+                                <b title="du">chocolat</b>.
                             </li>
 
                             <li>
