--- a/french/index.html
+++ b/french/index.html
@@ -183,6 +183,13 @@
 
   <div class="card">
     <span class="cefr">A1</span>
+    <header>Mon, Ton, Son</header>
+    <a class="theory">théorie</a>
+    <a href="pages/exercise_mon_ton_son.html">exercice de texte</a>
+  </div>
+
+  <div class="card">
+    <span class="cefr">A1</span>
     <header>De, du, des</header>
     <a class="theory">théorie</a>
     <a href="pages/exercise_de_du_des.html">exercice de texte</a>
