--- a/french/pages/stats.html
+++ b/french/pages/stats.html
@@ -63,7 +63,7 @@
                     <tr>
                         <th rowspan="3">date</th>
                         <th class="duration" rowspan="3">durée <br /><br />(heure:) min: sec</th>
-                        <th class="conjugations conjugations-plus others" colspan="9">A1</th>
+                        <th class="conjugations conjugations-plus others" colspan="10">A1</th>
                         <th class="conjugations conjugations-plus others" colspan="11">A2</th>
                         <th class="conjugations" colspan="6">B1</th>
                         <th class="conjugations conjugations-plus" colspan="7">B2</th>
@@ -73,6 +73,7 @@
                         <!-- A1 -->
                         <th class="conjugations" colspan="2">présent</th>
                         <th class="conjugations-plus" colspan="1">Devoir Pouvoir Falloir</th>
+                        <th class="others" colspan="1">Mon Ton Son</th>
                         <th class="others" colspan="1">De Du Des</th>
                         <th class="others" colspan="1">Ce Ces Cet</th>
                         <th class="others" colspan="1">Quand Comment Combien</th>
@@ -111,6 +112,7 @@
                         <th class="conjugations-plus"><a href="exercise_devoir_pouvoir_falloir_vouloir.html">texte</a>
                         </th>
 
+                        <th class="others"><a href="exercise_mon_ton_son.html">texte</a></th>
                         <th class="others"><a href="exercise_de_du_des.html">texte</a></th>
                         <th class="others"><a href="exercise_ce_ces_cet.html">texte</a></th>
 
@@ -200,6 +202,7 @@
                             <td class="conjugations" data-key="exercise_present.html"></td>
 
                             <td class="conjugations-plus" data-key="exercise_devoir_pouvoir_falloir_vouloir.html"></td>
+                            <td class="others" data-key="exercise_mon_ton_son.html"></td>
                             <td class="others" data-key="exercise_de_du_des.html"></td>
                             <td class="others" data-key="exercise_ce_ces_cet.html"></td>
                             <td class="others" data-key="exercise_quand_comment_combien.html"></td>
