added text exercise for mien-sien

--- a/french/index.html
+++ b/french/index.html
@@ -183,7 +183,7 @@
 
   <div class="card">
     <span class="cefr">A1</span>
-    <header>Mon, Ton, Son</header>
+    <header>Mon, ton, son</header>
     <a class="theory">théorie</a>
     <a href="pages/exercise_mon_ton_son.html">exercice de texte</a>
   </div>
@@ -197,14 +197,14 @@
 
   <div class="card">
     <span class="cefr">A1</span>
-    <header>Ce, Ces, Cet</header>
+    <header>Ce, ces, cet</header>
     <a class="theory">théorie</a>
     <a href="pages/exercise_ce_ces_cet.html">exercice de texte</a>
   </div>
 
   <div class="card">
     <span class="cefr">A1</span>
-    <header>Quand, Comment, Combien</header>
+    <header>Quand, comment, combien</header>
     <a class="theory">théorie</a>
     <a href="pages/exercise_quand_comment_combien.html">exercice de texte</a>
   </div>
@@ -225,7 +225,14 @@
 
   <div class="card">
     <span class="cefr">A2</span>
-    <header>Ceci, Cela, Celui</header>
+    <header>Mien, sien</header>
+    <a class="theory">théorie</a>
+    <a href="pages/exercise_mien_sien.html">exercice de texte</a>
+  </div>
+
+  <div class="card">
+    <span class="cefr">A2</span>
+    <header>Ceci, cela, celui</header>
     <a class="theory">théorie</a>
     <a href="pages/exercise_ceci_cela_celui.html">exercice de texte</a>
   </div>
