--- a/french/pages/stats.html
+++ b/french/pages/stats.html
@@ -64,7 +64,7 @@
                         <th rowspan="3">date</th>
                         <th class="duration" rowspan="3">durée <br /><br />(heure:) min: sec</th>
                         <th class="conjugations conjugations-plus others" colspan="10">A1</th>
-                        <th class="conjugations conjugations-plus others" colspan="11">A2</th>
+                        <th class="conjugations conjugations-plus others" colspan="12">A2</th>
                         <th class="conjugations" colspan="6">B1</th>
                         <th class="conjugations conjugations-plus" colspan="7">B2</th>
                         <th class="tense-sequence" colspan="4"></th>
@@ -82,6 +82,7 @@
 
                         <!-- A2 -->
                         <th class="conjugations-plus" colspan="1">Avoir ou Être</th>
+                        <th class="others" colspan="1">Mien Sien</th>
                         <th class="conjugations" colspan="2">imparfait</th>
                         <th class="conjugations" colspan="2">futur simple</th>
                         <th class="others" colspan="1" title="prépositions de temps">prép. de temps</th>
@@ -127,6 +128,7 @@
 
                         <!-- A2 -->
                         <th class="conjugations-plus"><a href="exercise_avoir_etre.html">texte</a></th>
+                        <th class="others"><a href="exercise_mien_sien.html">texte</a></th>
                         <!-- imparfait -->
                         <th class="conjugations"><a href="conjugations.html?L%27imparfait">liste</a></th>
                         <th class="conjugations"><a href="exercise_imperfect.html">texte</a></th>
@@ -214,6 +216,7 @@
 
                             <!-- A2 -->
                             <td class="conjugations-plus" data-key="exercise_avoir_etre.html"></td>
+                            <td class="others" data-key="exercise_mien_sien.html"></td>
 
                             <td class="conjugations" data-key="conjugations.html?L%27imparfait"></td>
                             <td class="conjugations" data-key="exercise_imperfect.html"></td>
