fine-tuned avoir-etre

--- a/french/pages/exercise_avoir_etre.html
+++ b/french/pages/exercise_avoir_etre.html
@@ -302,7 +302,7 @@
 
                             <li>
                                 Ce matin, nous (<b title="avons sorti">sortir</b>)
-                                <input type="text" pattern="avons sorti">
+                                <input type="text" class="wide" pattern="avons sorti">
                                 les poubelles.
                             </li>
 
