moved verb sequence into individual levels

--- a/french/index.html
+++ b/french/index.html
@@ -179,7 +179,7 @@
 
   <hr />
 
-  <h2>Les prépositions, conjonctions, pronoms</h2>
+  <h2>Les prépositions, déterminant, pronoms, conjonctions</h2>
 
   <div class="card">
     <span class="cefr">A1</span>
