--- a/french/pages/exercise_concordance_future.html
+++ b/french/pages/exercise_concordance_future.html
@@ -151,13 +151,13 @@
                             </li>
                             <li>
                                 Je (<b title="serai certainement arrivé">arriver certainement</b>)
-                                <input type="text" pattern="serai certainement arrivé">
+                                <input type="text" class="extra-wide" pattern="serai certainement arrivé">
                                 lorsque tu partiras.
                             </li>
                             <li>
                                 Ils attendront aussi longtemps que le directeur
                                 (<b title="n'aura pas donné">ne pas donner</b>)
-                                <input type="text" pattern="n'aura pas donné">
+                                <input type="text" class="wide" pattern="n'aura pas donné">
                                 le signal.
                             </li>
                             <li>
@@ -175,7 +175,7 @@
                             <li>
                                 Tu te fâcheras quand tu
                                 (<b title="auras entendu">entendre</b>)
-                                <input type="text" pattern="auras entendu">
+                                <input type="text" class="wide" pattern="auras entendu">
                                 les dernières nouvelles.
                             </li>
                             <li>
@@ -214,13 +214,13 @@
                             <li>
                                 Quand nous aurons une journée de congé, nous
                                 (<b title="nous rendrons">se rendre</b>)
-                                <input type="text" pattern="nous rendrons">
+                                <input type="text" class="wide" pattern="nous rendrons">
                                 à la campagne.
                             </li>
                             <li>
                                 Je
                                 (<b title="serai certainement parti">partir certainement</b>)
-                                <input type="text" pattern="serai certainement parti">
+                                <input type="text" class="extra-wide" pattern="serai certainement parti">
                                 lorsque tu arriveras.
                             </li>
                             <li>
@@ -235,9 +235,9 @@
                                 partir.
                             </li>
                             <li>
-                                Vous me donnerai votre compte-rendu quand vous le
-                                (<b title="terminé">terminer</b>)
-                                <input type="text" pattern="terminé">
+                                Vous me donnerai votre compte-rendu quand vous
+                                (<b title="l'aurez terminé">le terminer</b>)
+                                <input type="text" class="wide" pattern="l'aurez terminé">
                             </li>
                             <li>
                                 Lorsque j’aurai appris le résultat du concours, je
@@ -248,7 +248,7 @@
                             <li>
                                 L’été prochain, quand nous irons aux États-Unis, nous
                                 (<b title="nous baignerons">se baigner</b>)
-                                <input type="text" pattern="nous baignerons">
+                                <input type="text" class="wide" pattern="nous baignerons">
                                 dans la mer.
                             </li>
                             <li>
@@ -317,7 +317,7 @@
                             <li>
                                 Tu pourras me parler de cette chanson quand tu
                                 (<b title="l'auras écoutée">l’écouter</b>)
-                                <input type="text" pattern="l'auras écoutée">
+                                <input type="text" class="wide" pattern="l'auras écoutée">
                             </li>
                             <li>
                                 Quand la saison le
@@ -360,7 +360,7 @@
                                 <input type="text" pattern="retournerai">
                                 en classe mais, ce matin, je
                                 (<b title="reste">rester</b>)
-                                <input type="text" pattern="rencontreras">
+                                <input type="text" pattern="reste">
                                 au lit, je suis malade.
                             </li>
                             <li>
