full name for verb concordance column header on stats page

--- a/french/pages/stats.html
+++ b/french/pages/stats.html
@@ -83,7 +83,10 @@
                         <th class="conjugations-plus" colspan="1">Avoir ou Être</th>
                         <th class="others" colspan="1">Mien Sien</th>
                         <th class="conjugations" colspan="2">imparfait</th>
-                        <th class="tense-sequence" colspan="1" title="imparfait - passé composé">i.-p.c.</th>
+                        <th class="tense-sequence" colspan="1">
+                            <span class="full-name">imparfait - passé&nbsp;composé</span>
+                            <span class="short-name" title="imparfait - passé composé">i.-p.c.</span>
+                        </th>
                         <th class="conjugations" colspan="2">futur simple</th>
                         <th class="others" colspan="1" title="prépositions de temps">prép. de temps</th>
                         <th class="others" colspan="1">Ceci Cela Celui</th>
@@ -93,17 +96,27 @@
 
                         <!-- B1 -->
                         <th class="conjugations" colspan="2">plus-que-parfait</th>
-                        <th class="tense-sequence" title="imparfait - passé composé - plus-que-parfait">i-pc-pqp</th>
+                        <th class="tense-sequence">
+                            <span class="full-name">imparfait - passé&nbsp;composé - plus&#8209;que&#8209;parfait</span>
+                            <span class="short-name"
+                                title="imparfait - passé composé - plus-que-parfait">i-pc-pqp</span>
+                        </th>
                         <th class="conjugations" colspan="2">conditionnel présent</th>
                         <th class="conjugations" colspan="2">subjonctif présent</th>
 
                         <!-- B2 -->
                         <th class="conjugations" colspan="2">subjonctif passé</th>
                         <th class="conjugations" colspan="2">conditionnel passé</th>
-                        <th class="tense-sequence" colspan="1" title="Les phrases de condition">si...</th>
+                        <th class="tense-sequence" colspan="1">
+                            <span class="full-name">Les phrases de condition</span>
+                            <span class="short-name" title="Les phrases de condition">si...</span>
+                        </th>
                         <th class="conjugations-plus" colspan="1">passif</th>
                         <th class="conjugations" colspan="2">futur antérieur</th>
-                        <th class="tense-sequence" title="futur simple - futur antérieur">f.s.-f.a.</th>
+                        <th class="tense-sequence">
+                            <span class="full-name">futur simple - futur antérieur</span>
+                            <span class="short-name" title="futur simple - futur antérieur">f.s.-f.a.</span>
+                        </th>
                     </tr>
                     <tr>
                         <!-- A1 -->
